# sking-sasrv

./: Dockerfile  _notes  build.sh  deploy-code.sh  deploy-pack.sh  docker-compose.yml
gmsv/: CMakeLists.txt  autil.c  buf.c  callfromac.c  callfromcli.c  configfile.c  descrypt.c  descrypt.h  function.c  handletime.c  init.c  link.c  log.c  ls2data.h  lssproto_serv.c  lssproto_util.c  main.c  msignal.c  net.c  npc_itemshop.c  object.c  saacproto_cli.c  saacproto_util.c  test.sh  util.c  vertime.h  vertime.sh
gmsv/battle/: CMakeLists.txt  battle.c  battle_ai.c  battle_command.c  battle_event.c  battle_item.c  battle_magic.c  pet_skill.c  profession_skill.c
gmsv/char/: CMakeLists.txt  addressbook.c  char.c  char_angel.c  char_base.c  char_data.c  char_event.c  char_item.c  char_party.c  char_talk.c  char_walk.c  chatmagic.c  chatroom.c  encount.c  enemy.c  event.c  family.c  pet.c  pet_event.c  petmail.c  skill.c  title.c  trade.c
gmsv/include/: addressbook.h  anim_tbl.h  autil.h  battle.h  battle_ai.h  battle_command.h  battle_event.h  battle_item.h  battle_magic.h  buf.h  char.h  char_base.h  char_data.h  char_event.h  char_talk.h  chatmagic.h  chatroom.h  common.h  configfile.h  correct_bug.h  defaultGroundEnemy.h  defaultPlayer.h  encount.h  enemy.h  enemyexptbl.h  event.h  family.h  function.h  handletime.h  init.h  item.h  item_event.h  item_gen.h  item_trade.h  levelup.h  link.h  log.h  lssproto_serv.h  lssproto_util.h  magic.h  (+102 more)
gmsv/include/NewBilu/: characters.h  debug.h  newshop.h  sasql.h  version.h
gmsv/include/mylua/: base.h  function.h  mylua.h
gmsv/item/: CMakeLists.txt  item.c  item_event.c  item_gen.c
gmsv/magic/: CMakeLists.txt  magic.c  magic_base.c  magic_field.c
gmsv/map/: CMakeLists.txt  map_deal.c  map_util.c  map_warppoint.c  readmap.c
gmsv/mylua/: CMakeLists.txt  ablua.c  battlebase.c  charbase.c  configbase.c  enemytempbase.c  family.c  function.c  init.c  itembase.c  lssprotobase.c  magicbase.c  mapbase.c  mylua.c  netbase.c  npcbase.c  objectbase.c  offlinebase.c  otherbase.c  petskill.c  profession_skill.c  saacproto.c  sasqlbase.c
gmsv/newbilu/: CMakeLists.txt  characters.c  crypto.c  newshop.c  sasql.c
gmsv/npc/: CMakeLists.txt  npc_action.c  npc_airplane.c  npc_alldoman.c  npc_autopk.c  npc_bankman.c  npc_bodylan.c  npc_bus.c  npc_charm.c  npc_checkman.c  npc_dengon.c  npc_door.c  npc_doorman.c  npc_dragonfusion.c  npc_duelranking.c  npc_eventaction.c  npc_exchangeman.c  npc_familyman.c  npc_fmchallenge.c  npc_fmdengon.c  npc_fmhealer.c  npc_fmletter.c  npc_fmpkcallman.c  npc_fmpkman.c  npc_fmwarpman.c  npc_freepetskillshop.c  npc_gamblebank.c  npc_gamblemaster.c  npc_gambleroulette.c  npc_healer.c  npc_itemchange.c  npc_itemshop.c  npc_janken.c  npc_luckyman.c  npc_makepair.c  npc_manorsman.c  npc_mic.c  npc_msg.c  npc_newnpcman.c  npc_newvipshop.c  (+38 more)
mysql/: mysql-community-common-5.7.34-1.el7.x86_64.rpm  mysql-community-devel-5.7.34-1.el7.x86_64.rpm  mysql-community-libs-5.7.34-1.el7.x86_64.rpm  mysql-community-libs-compat-5.7.34-1.el7.x86_64.rpm
pack/: CSA.sql
pack/gmsv/: old_icache.txt  setup.cf  sql.cf
pack/gmsv/Schedule/: 141_29_46  141_3_15  141_46_17  141_46_34  6030_53_8
pack/gmsv/data/: appear.txt  bmitem.txt  charatitle.txt  circle_type.txt  daylimit.txt  effect.txt  encount.txt  enemy1.txt  enemybase1.txt  enemybase1.txt.bak  enemypintu1.txt  gambleitems.txt  gmipset.txt  gmset.txt  gmset.txt.bak  group.txt  group1.txt  history.txt  illegalitemtable.txt  illegalpettable.txt  inv.txt  item_intensify.txt  itematom.txt  itemset6.txt  itemset6.txt.bak  jobdaily.txt  logcdkeytable.txt  logitemtable.txt  logpettable.txt  magic.txt  malayfia.txt  master  mission.txt  petskill.txt  petskill2.txt  pettalk.txt  picturecate.txt  profession.txt  question.txt  raceman.txt  (+6 more)
pack/gmsv/data/map/: aaa  battlemap.txt  map_noexit.txt  mapset.txt  mapwarp.txt  mapwarp.txt.bak
pack/gmsv/log/: log.cf
pack/gmsv/mylua/function/: BattleSkillMode.lua  CheckLog.lua  FreeMagicMpRate.lua  TransOverFunction.lua  action.lua  action.lua.bak  battlecommand.lua  battleenemybase.lua  battlefinishfunction.lua  battleover.lua  battlewatch.lua  capturefunction.lua  charcreate.lua  chardelete.lua  charexpsave.lua  charlogin.lua  charlogout.lua  (+28 more)
pack/saac/: acserv.cf
packages_32/: mysql-community-common-5.7.34-1.el6.i686.rpm  mysql-community-devel-5.7.34-1.el6.i686.rpm  mysql-community-libs-5.7.34-1.el6.i686.rpm
saac/: CMakeLists.txt  acfamily.c  char.c  db.c  lock.c  mail.c  main.c  md5.c  recv.c  saacproto_serv.c  saacproto_util.c  sasql.c  util.c  vertime.h  vertime.sh
saac/cmake/: FindMySQL.cmake
saac/include/: acfamily.h  char.h  characters.h  db.h  lock.h  mac.h  mail.h  main.h  md5.h  recv.h  saacproto_serv.h  saacproto_util.h  sasql.h  util.h  version.h
(+2879 files in other folders)
