cmake_minimum_required(VERSION 3.10)

add_library(npc
    npc_action.c
    npc_airplane.c
    npc_alldoman.c
    npc_autopk.c
    npc_bankman.c
    npc_bodylan.c
    npc_bus.c
    npc_charm.c
    npc_checkman.c
    npc_dengon.c
    npc_door.c
    npc_doorman.c
    npc_dragonfusion.c
    npc_duelranking.c
    npc_eventaction.c
    npc_exchangeman.c
    npc_familyman.c
    # npc_fmchallenge.c # causes an error. something i don't know and other versions don't have.
    npc_fmdengon.c
    npc_fmhealer.c
    npc_fmletter.c
    npc_fmpkcallman.c
    npc_fmpkman.c
    npc_fmwarpman.c
    npc_freepetskillshop.c
    npc_gamblebank.c
    npc_gamblemaster.c
    npc_gambleroulette.c
    npc_healer.c
    npc_itemchange.c
    npc_itemshop.c
    npc_janken.c
    npc_luckyman.c
    npc_makepair.c
    npc_manorsman.c
    npc_mic.c
    npc_msg.c
    npc_newnpcman.c
    npc_newvipshop.c
    npc_npcenemy.c
    npc_oldman.c
    npc_partyauto.c
    npc_pauctionman.c
    npc_petfusion.c
    npc_petmaker.c
    npc_petracemaster.c
    npc_petracepet.c
    npc_petshop.c
    npc_petskillshop.c
    npc_poolitemshop.c
    npc_quiz.c
    npc_riderman.c
    npc_roomadminnew.c
    npc_sample.c
    npc_savepoint.c
    npc_scheduleman.c
    npc_ship.c
    npc_signboard.c
    npc_simpleshop.c
    npc_storyteller.c
    npc_sysinfo.c
    npc_testnpc.c
    npc_timeman.c
    npc_townpeople.c
    npc_transerman.c
    npc_transmigration.c
    npc_vipshop.c
    npc_warp.c
    npc_warpman.c
    npc_welfare.c
    npc_windowhealer.c
    npc_windowman.c
    npccreate.c
    npcgen.c
    npctemplate.c
    npcutil.c
    readnpc.c
)
target_include_directories(npc PUBLIC ../include)
target_include_directories(npc PUBLIC /opt/lua)
